--- a/src/app/new-evidence/new-evidence.component.css
+++ b/src/app/new-evidence/new-evidence.component.css
@@ -44,19 +44,18 @@ h1.example-app-name {
   color: rgb(106, 60, 177);
   background-color: white;
   border-bottom: 1px solid;
-  height: 320px;
+  height: 340px;
   width: 100%;
 }
 
 .thirdnav.mat-toolbar.mat-toolbar-single-row{
-  top: 40px;
+  top: 60px;
   position: absolute;
   background-color: white;
   color: rgb(106, 60, 177);
   border-bottom: 1px solid;
   height: 40px;
 }
-
 
 .list-holder{
   background: rgb(106, 60, 177);
@@ -117,6 +116,7 @@ h1.example-app-name {
   width: 160px;
   font-size: 14px;
   padding-top: 18px;
+  margin-top: 15px;
 }
 
 .location_input{
@@ -132,7 +132,8 @@ h1.example-app-name {
 
 
 .loc_class{
-  margin-top: 5px;
+  margin-top: 36px;
+  margin-right: -20px;
 }
 
 
@@ -141,6 +142,7 @@ h1.example-app-name {
   color: rgb(106, 60, 177);
   margin-left: 2px;
   width: 90%;
+  font-size: 9pt;
 }
 
 .loc_icon{
@@ -150,10 +152,10 @@ h1.example-app-name {
 }
 
 .entry_form{
-  top: 100px;
+  top: 110px;
   position: absolute;
   margin-left: 0px;
-  padding-bottom: 20px;
+  padding-bottom: 10px;
   width: 99%;
   border: none;
   font-size: 14px;
@@ -172,9 +174,12 @@ h1.example-app-name {
 
 .submit_button{
   float: right;
+  margin-right: 10px;
   color: white;
   background: rgb(106, 60, 177);
 }
+
+
 /*.list-items.logout_tab{
   z-index: 1;
   position: absolute;
@@ -186,3 +191,29 @@ h1.example-app-name {
   text-align: right;
   border-top: 1px white solid;
 }*/
+
+.location_input.text_input{
+  font-size: 9.4pt;
+}
+
+.cal_icon{
+  font-size: 10pt;
+  margin-bottom: -10px;
+}
+
+.view-log{
+  margin-top: 10px;
+}
+
+.mat-card{
+  font-size: 5pt;
+  padding: 10px;
+  border: rgb(106, 60, 177) solid 1px;
+  margin: 15px;
+  box-shadow:  -1px 1px #77aaff,
+       -2px 2px #77aaff,
+       -3px 3px #77aaff,
+       -4px 4px #77aaff,
+       -5px 5px #77aaff;
+}
+
